Fix flash of invisible text FA

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -56,6 +56,7 @@ hr.star-primary:after {
     top: -.8em;
     padding: 0 .25em;
     font-family: FontAwesome;
+    font-display: swap;
     font-size: 2em;
 }
 
